@@ -13,7 +13,7 @@
 	tilecoll WALL, WALL, WALL, WALL ; 0c
 	tilecoll WALL, WALL, WALL, WALL ; 0d
 	tilecoll WALL, WALL, WALL, WALL ; 0e
-	tilecoll WALL, WALL, WALL, WALL ; 0f
+	tilecoll HEADBUTT_TREE, HEADBUTT_TREE, HEADBUTT_TREE, HEADBUTT_TREE ; 0f
 	tilecoll WALL, WALL, WALL, WALL ; 10
 	tilecoll WALL, WALL, WALL, WALL ; 11
 	tilecoll WALL, WALL, DOOR, WALL ; 12
@@ -48,11 +48,11 @@
 	tilecoll HOP_DOWN, FLOOR, WALL, FLOOR ; 2f
 	tilecoll WALL, WALL, WALL, WALL ; 30
 	tilecoll FLOOR, FLOOR, FLOOR, FLOOR ; 31
-	tilecoll WALL, CUT_TREE, WALL, FLOOR ; 32
-	tilecoll WALL, WALL, FLOOR, CUT_TREE ; 33
-	tilecoll CUT_TREE, FLOOR, WALL, WALL ; 34
-	tilecoll FLOOR, CUT_TREE, WALL, FLOOR ; 35
-	tilecoll WALL, WALL, FLOOR, WALL ; 36
+	tilecoll HEADBUTT_TREE, CUT_TREE, HEADBUTT_TREE, FLOOR ; 32
+	tilecoll HEADBUTT_TREE, HEADBUTT_TREE, FLOOR, CUT_TREE ; 33
+	tilecoll CUT_TREE, FLOOR, HEADBUTT_TREE, HEADBUTT_TREE ; 34
+	tilecoll FLOOR, CUT_TREE, HEADBUTT_TREE, FLOOR ; 35
+	tilecoll HEADBUTT_TREE, HEADBUTT_TREE, FLOOR, HEADBUTT_TREE ; 36
 	tilecoll WALL, WALL, WALL, WALL ; 37
 	tilecoll FLOOR, FLOOR, WALL, WALL ; 38
 	tilecoll FLOOR, FLOOR, WALL, WALL ; 39
@@ -64,7 +64,7 @@
 	tilecoll UP_WALL, UP_WALL, FLOOR, FLOOR ; 3f
 	tilecoll WALL, FLOOR, FLOOR, FLOOR ; 40
 	tilecoll FLOOR, FLOOR, WALL, FLOOR ; 41
-	tilecoll HOP_DOWN, WALL, WALL, WALL ; 42
+	tilecoll HOP_DOWN, HEADBUTT_TREE, WALL, WALL ; 42
 	tilecoll WATER, WATER, WATER, WATER ; 43
 	tilecoll FLOOR, FLOOR, FLOOR, FLOOR ; 44
 	tilecoll FLOOR, FLOOR, FLOOR, FLOOR ; 45
@@ -74,7 +74,7 @@
 	tilecoll FLOOR, FLOOR, FLOOR, FLOOR ; 49
 	tilecoll FLOOR, FLOOR, WARP_CARPET_DOWN, WALL ; 4a
 	tilecoll HOP_DOWN_RIGHT, WALL, WALL, WALL ; 4b
-	tilecoll FLOOR, FLOOR, WALL, FLOOR ; 4c
+	tilecoll FLOOR, FLOOR, HEADBUTT_TREE, FLOOR ; 4c
 	tilecoll FLOOR, WALL, FLOOR, WALL ; 4d
 	tilecoll WALL, FLOOR, WALL, FLOOR ; 4e
 	tilecoll FLOOR, WALL, WALL, WALL ; 4f
@@ -94,7 +94,7 @@
 	tilecoll FLOOR, FLOOR, FLOOR, FLOOR ; 5d
 	tilecoll FLOOR, FLOOR, FLOOR, FLOOR ; 5e
 	tilecoll FLOOR, WALL, FLOOR, WALL ; 5f
-	tilecoll FLOOR, WALL, CUT_TREE, WALL ; 60
+	tilecoll FLOOR, HEADBUTT_TREE, CUT_TREE, HEADBUTT_TREE ; 60
 	tilecoll FLOOR, FLOOR, WALL, WALL ; 61
 	tilecoll WALL, WALL, WALL, FLOOR ; 62
 	tilecoll WALL, WALL, FLOOR, WALL ; 63
@@ -106,10 +106,10 @@
 	tilecoll WALL, WALL, WALL, WALL ; 69
 	tilecoll WATER, WALL, WATER, WALL ; 6a
 	tilecoll WATER, WATER, WALL, WALL ; 6b
-	tilecoll WALL, WALL, FLOOR, FLOOR ; 6c
-	tilecoll WALL, FLOOR, WALL, FLOOR ; 6d
-	tilecoll FLOOR, WALL, FLOOR, WALL ; 6e
-	tilecoll FLOOR, FLOOR, WALL, WALL ; 6f
+	tilecoll HEADBUTT_TREE, HEADBUTT_TREE, FLOOR, FLOOR ; 6c
+	tilecoll HEADBUTT_TREE, FLOOR, HEADBUTT_TREE, FLOOR ; 6d
+	tilecoll FLOOR, HEADBUTT_TREE, FLOOR, HEADBUTT_TREE ; 6e
+	tilecoll FLOOR, FLOOR, HEADBUTT_TREE, HEADBUTT_TREE ; 6f
 	tilecoll FLOOR, WALL, CAVE, WALL ; 70
 	tilecoll WALL, WALL, WALL, WALL ; 71
 	tilecoll WALL, WALL, WALL, WALL ; 72
